--- a/app/src/main/res/layout/fragment_danh_sach_mon_an.xml
+++ b/app/src/main/res/layout/fragment_danh_sach_mon_an.xml
@@ -1,14 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.DanhSachMonAnFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:orientation="vertical">
+       <androidx.appcompat.widget.Toolbar
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           app:menu="@menu/toolbar_menu"
+           >
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="Hi người dùng"
+               android:textSize="24dp"
+               android:textStyle="bold"
+               android:layout_marginStart="30dp"/>
+       </androidx.appcompat.widget.Toolbar>
+       <androidx.cardview.widget.CardView
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_marginHorizontal="16dp"
+           app:cardBackgroundColor="#F5F5F5"
+           app:cardCornerRadius="10dp">
+           <LinearLayout
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:orientation="horizontal">
+               <ImageView
+                   android:layout_width="24dp"
+                   android:layout_height="24dp"
+                   android:src="@drawable/search"
+                   android:layout_margin="10dp"/>
+               <TextView
+                   android:layout_width="wrap_content"
+                   android:layout_height="24dp"
+                   android:text="Bạn muốn ăn già hôm nay?"
+                   android:layout_gravity="center"
+                   android:textColor="#9F9F9F"/>
+           </LinearLayout>
+       </androidx.cardview.widget.CardView>
+   </LinearLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_marginRight="30dp"
+        android:layout_marginBottom="100dp"
+        android:src="@drawable/plus"
+        android:background="@drawable/custom_button_add"/>
 
-</FrameLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
