--- a/app/src/main/res/layout/activity_man_hinh_chao.xml
+++ b/app/src/main/res/layout/activity_man_hinh_chao.xml
@@ -1,9 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.ManHinhChaoActivity">
+    android:orientation="vertical"
+    android:background="@drawable/back_register"
+    >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="307dp"
+        android:layout_marginTop="40dp"
+        android:src="@drawable/foodyback" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="FOODY WELLCOME"
+        android:textSize="40dp"
+        android:layout_margin="30dp"
+        android:textStyle="bold"
+        android:textColor="#EE5050"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="10dp"
+        android:text="Enjoy delicious, diverse cuisine"
+        android:textSize="20dp"
+        android:textColor="@color/black"
+        android:textStyle="italic" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:textColor="@color/black"
+        android:layout_marginTop="10dp"
+        android:text="without worrying about price, only"
+        android:textSize="20dp"
+        android:textStyle="italic" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="150dp"
+        android:layout_marginTop="10dp"
+        android:text="at FOODY!"
+        android:textColor="@color/black"
+        android:textSize="20dp"
+        android:textStyle="italic" />
+</LinearLayout>
