--- a/app/src/main/res/layout/fragment_danh_sach_mon_an.xml
+++ b/app/src/main/res/layout/fragment_danh_sach_mon_an.xml
@@ -24,6 +24,7 @@
                android:layout_marginStart="30dp"/>
        </androidx.appcompat.widget.Toolbar>
        <androidx.cardview.widget.CardView
+           android:id="@+id/cardViewSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
@@ -48,6 +49,7 @@
        </androidx.cardview.widget.CardView>
    </LinearLayout>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabAddFood"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
