--- a/app/src/main/res/layout/activity_thong_tin_nha_hang.xml
+++ b/app/src/main/res/layout/activity_thong_tin_nha_hang.xml
@@ -77,11 +77,7 @@
             android:layout_marginStart="20dp"
             android:layout_gravity="center"
             />
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
 
-            />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -92,7 +88,7 @@
         <ImageView
             android:layout_width="42dp"
             android:layout_height="42dp"
-            android:src="@drawable/facebook"
+            android:src="@drawable/facebook1"
             android:layout_marginStart="16dp"/>
         <TextView
             android:layout_width="wrap_content"
@@ -144,7 +140,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="20dp"
-            android:layout_weight=""
             android:text="Đà nẵng"
             android:textColor="@color/pink" />
 
