--- a/app/src/main/res/layout/activity_thong_tin_nha_hang.xml
+++ b/app/src/main/res/layout/activity_thong_tin_nha_hang.xml
@@ -144,7 +144,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="20dp"
-            android:layout_weight=""
+            android:layout_weight="1"
             android:text="Đà nẵng"
             android:textColor="@color/pink" />
 
