--- a/app/src/main/res/layout/activity_sua_mon_an.xml
+++ b/app/src/main/res/layout/activity_sua_mon_an.xml
@@ -21,7 +21,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Thêm món ăn"
+        android:text="Chỉnh sửa"
         android:textColor="@color/black"
         android:textSize="24dp"
         android:textStyle="bold"
@@ -162,7 +162,7 @@
             android:inputType="textMultiLine|textCapSentences"
             android:lines="5"
             android:gravity="top"
-        />
+            />
 
     </com.google.android.material.textfield.TextInputLayout>
 
