Thêm activity_danh_gia.xml

--- a/app/src/main/res/layout/activity_danh_gia.xml
+++ b/app/src/main/res/layout/activity_danh_gia.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.DanhGiaActivity">
+    tools:context=".activities.DanhGiaActivity"
+    android:orientation="vertical"
+    >
 
     <ImageView
         android:layout_width="408dp"
@@ -46,4 +48,4 @@
         tools:layout_editor_absoluteX="6dp"
         tools:layout_editor_absoluteY="371dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
