--- a/app/src/main/res/layout/activity_danh_gia.xml
+++ b/app/src/main/res/layout/activity_danh_gia.xml
@@ -7,27 +7,48 @@
     tools:context=".activities.DanhGiaActivity"
     android:orientation="vertical"
     >
+    <RatingBar
 
-    <ImageView
-        android:layout_width="408dp"
-        android:layout_height="291dp"
-        android:src="@mipmap/stars"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp">
-
-    </ImageView>
+        android:id="@+id/ratingBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:numStars="5"
+        android:rating="0"
+        android:stepSize="1"
+        android:layout_gravity="center"
+        android:layout_marginTop="32dp"/>
 
     <LinearLayout
         android:padding="10dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="wrap_content">
 
-
-        >
+        <!-- Add other views as needed -->
 
     </LinearLayout>
-
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nhận xét:"
+            android:textSize="24dp"
+            android:textColor="@color/black"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp" />
+        <TextView
+            android:layout_width="410dp"
+            android:layout_height="158dp"
+            android:textSize="24dp"
+            android:textColor="@color/black"
+            android:layout_gravity="center"
+            android:layout_marginTop="16dp"
+            />
+    </LinearLayout>
 
 
     <Button
@@ -36,18 +57,9 @@
         android:layout_height="51dp"
         android:text="Gửi đánh giá"
         android:textSize="25dp"
-        tools:layout_editor_absoluteX="72dp"
-        tools:layout_editor_absoluteY="629dp" />
-
-    <TextView
-        android:layout_width="398dp"
-        android:layout_height="158dp"
-        android:text="Nhận xét:"
-        android:textSize="24dp"
-        android:textColor="@color/black"
-        tools:layout_editor_absoluteX="6dp"
-        tools:layout_editor_absoluteY="371dp" />
-
+        android:background="#FF4081"
+        android:layout_gravity="center"
+        android:layout_marginTop="16dp" />
 
 </LinearLayout>
 
