--- a/app/src/main/res/layout/activity_thong_tin_nha_hang.xml
+++ b/app/src/main/res/layout/activity_thong_tin_nha_hang.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         >
         <ImageView
-
+            android:id="@+id/myBack"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:src="@drawable/backphap"/>
