--- a/app/src/main/res/layout/fragment_gio_hang.xml
+++ b/app/src/main/res/layout/fragment_gio_hang.xml
@@ -9,13 +9,24 @@
     android:paddingRight="16dp"
     android:paddingBottom="16dp"
     tools:context=".fragments.GioHangFragment">
+    <TextView
+        android:id="@+id/txtGioHang"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Giỏ Hàng"
+        android:layout_marginLeft="130dp"
+        android:textSize="26dp"
+        android:textStyle="bold"/>
 
     <ListView
         android:id="@+id/listViewCart"
         android:layout_width="match_parent"
         android:layout_height="400dp"
         android:dividerHeight="0.5dp"
-        android:layout_marginBottom="8dp"/>
+        android:layout_marginBottom="8dp"
+        android:layout_below="@id/txtGioHang"></ListView>
+
 
     <Spinner
         android:id="@+id/spinnerPaymentMethod"
